--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -83,35 +83,45 @@
             {% set sorted_exams = exams | sort(attribute='start_time') %}
             {% set positions = [] %}
 
-            {# Calculate row indexes for overlapping exams #}
+            {# Calculate overlapping row indexes #}
             {% for exam in sorted_exams %}
-                {% set overlapping = positions | selectattr("start", "lt", exam.end_time) | selectattr("end", "gt", exam.start_time) | list %}
+                {% set overlapping = positions
+                    | selectattr("start", "lt", exam.end_time)
+                    | selectattr("end", "gt", exam.start_time)
+                    | list %}
                 {% set row_index = overlapping | length %}
                 {% set _ = positions.append({'start': exam.start_time, 'end': exam.end_time, 'row': row_index}) %}
             {% endfor %}
 
+            {% if positions %}
+                {% set max_row = (positions | map(attribute='row') | max) + 1 %}
+            {% else %}
+                {% set max_row = 1 %}
+            {% endif %}
+
             <div class="calendar-row calendar-day-row">
                 <div class="calendar-date-label">{{ date.strftime("%d %b (%A)") }}</div>
+                <div class="calendar-day" style="width: {{ hour_width * 24 }}px; height: {{ max_row * 60 }}px;">
+                    {% for i in range(sorted_exams|length) %}
+                        {% set exam = sorted_exams[i] %}
+                        {% set pos = positions[i] %}
+                        {% set start_hour = exam.start_time.hour + (exam.start_time.minute / 60) %}
+                        {% set end_hour = exam.end_time.hour + (exam.end_time.minute / 60) %}
+                        {% set left_pos = start_hour * hour_width %}
+                        {% set width = (end_hour - start_hour) * hour_width %}
+                        {% set top_pos = pos.row * 60 %}
 
-                {% for i in range(sorted_exams|length) %}
-                    {% set exam = sorted_exams[i] %}
-                    {% set pos = positions[i] %}
-                    {% set start_hour = exam.start_time.hour + (exam.start_time.minute / 60) %}
-                    {% set end_hour = exam.end_time.hour + (exam.end_time.minute / 60) %}
-                    {% set left_pos = start_hour * hour_width %}
-                    {% set width = (end_hour - start_hour) * hour_width %}
-                    {% set row_index = pos.row %}
-                    <div class="calendar-day" style="width: {{ hour_width * 24 }}px; min-height: {{ row_index * 60 }}px;">
                         <div class="exam-block"
-                            style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ row_index * 60 }}px;">
+                            style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
                             <strong>{{ exam.course_code }}</strong><br>
                             {{ exam.course_name }}<br>
-                            <small>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</small><br>
+                            <small>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</small>
                         </div>
-                    </div>
-                {% endfor %}
+                    {% endfor %}
+                </div>
             </div>
         {% endfor %}
+
     </div>
 </div>
 {% endblock %}
