--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -120,9 +120,8 @@
                                 </div>
                             {% endfor %}
                         {% endif %}
-                    </div>
+                    </div><br>
                 {% endif %}
-                <br>
 
                 <!-- Tab Content Sections -->
                 {% if show_dashboard %}
