--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -15,9 +15,9 @@
         <div class="form-left" style="width: 100%">
 
             <!-- Overview -->
-            <div class="dashboard-row">
+            <div class="dashboard-row" style="grid-template-columns: repeat(8, 1fr);">
                 <div class="dashboard-frame">
-                    <h3>Total Invigilation Reports</h3>
+                    <h3>Total Reports</h3>
                     <p class="dashboard-text">{{ total_report }}</p>
                 </div>
                 <div class="dashboard-frame">
@@ -85,17 +85,6 @@
             <tbody>
                 {% for (status, start_time), grouped in attendances|groupby("group_key") %}
                     {% set rowspan = grouped|length %}
-
-                    <!-- Optional: Group Header -->
-                    <tr class="group-header-row">
-                        <td colspan="7" style="background-color: #f5f5f5;">
-                            <strong>
-                                Exam Status: {{ 'Active' if status else 'Inactive' }} |
-                                Exam Start: {{ start_time.strftime("%d/%b/%Y %H:%M") }}
-                            </strong>
-                        </td>
-                    </tr>
-
                     {% for att in grouped %}
                     <tr class="
                         {% if not att.report.exam.examStatus %}
