--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -83,7 +83,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for exam, grouped in attendances|groupby("report.exam.examId") %}
+                {% for (status, start_time), grouped in attendances|groupby("group_key") %}
                     {% set rowspan = grouped|length %}
                     {% for att in grouped %}
                         <tr class="
