--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -87,12 +87,12 @@
                     {% set rowspan = grouped|length %}
                     {% for att in grouped %}
                         <tr class="
-                            {% if not row.examStatus %}
+                            {% if not att.report.exam.examStatus %}
                                 inactive-row-show
-                            {% elif row.examVenue is none %}
+                            {% elif att.report.exam.examVenue is none %}
                                 error-row-show
                             {% endif %}
-                        ">      
+                        "> 
                             {% if loop.first %}
                                 <!-- Exam ID -->
                                 <td rowspan="{{ rowspan }}" style="text-align:center;">[{{ att.report.exam.examId }}]</td>
