--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -10,6 +10,7 @@
 {% block content %}
 <div class="menu-section">
     <h3>List of All Exam Sessions Details</h3>
+    <h4>Color <span style="color: lightgrey;">pass exam</span>, and color <span style="color: #4682b4;">coming exam</span></h4>
     <div class="calendar-container">
         <!-- Time Header Row -->
         <div class="calendar-row">
