--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -20,7 +20,7 @@
             {% endfor %}
         </div>
 
-        {% set hour_width = 75 %}
+        {% set hour_width = 80 %}
         {% for date, exams in calendar_data.items() %}
             {% set sorted_exams = exams | sort(attribute='start_time') %}
             {% set positions = [] %}
@@ -48,7 +48,7 @@
                         {% set pos = positions[i] %}
                         {% set start_hour = exam.start_time.hour + (exam.start_time.minute / 60) %}
                         {% set end_hour = exam.end_time.hour + (exam.end_time.minute / 60) %}
-                        {% set left_pos = start_hour * hour_width %}    
+                        {% set left_pos = 10 + start_hour * hour_width %}    
                         {% set width = (end_hour - start_hour) * hour_width %}
                         {% set top_pos =  5 + (pos.row * 60) %}
 
