--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -41,7 +41,7 @@
             {% endif %}
 
             <div class="calendar-row">
-                <div class="calendar-date-label">{{ date.strftime("%d %b (%A)") }}</div>
+                <div class="calendar-date-label">{{ date.strftime("%d %b %Y (%A)") }}</div>
                 <div class="calendar-day" style="width: {{ hour_width * 24 }}px; height: {{ max_row * 60 }}px;">
                     {% for i in range(sorted_exams|length) %}
                         {% set exam = sorted_exams[i] %}
@@ -51,8 +51,14 @@
                         {% set left_pos = 10 + start_hour * hour_width %}
                         {% set width = (end_hour - start_hour) * hour_width %}
                         {% set top_pos =  5 + (pos.row * 60) %}
-                        <div class="exam-block"
-                            style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
+                        {% if not exam.examStatus %}
+                            <div class="exam-block" style="background-color: grey ;left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
+                                <strong>{{ exam.course_code }}</strong><br>
+                                {{ exam.course_name }}<br>
+                                <i>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</i>
+                            </div>
+                        {% endif %}
+                        <div class="exam-block" style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
                             <strong>{{ exam.course_code }}</strong><br>
                             {{ exam.course_name }}<br>
                             <i>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</i>
