--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -20,7 +20,7 @@
             {% endfor %}
         </div>
 
-        {% set hour_width = 80 %}
+        {% set hour_width = 75 %}
         {% for date, exams in calendar_data.items() %}
             {% set sorted_exams = exams | sort(attribute='start_time') %}
             {% set positions = [] %}
@@ -50,15 +50,10 @@
                         {% set end_hour = exam.end_time.hour + (exam.end_time.minute / 60) %}
                         {% set left_pos = 10 + start_hour * hour_width %}
                         {% set width = (end_hour - start_hour) * hour_width %}
-                        {% set top_pos =  5 + (pos.row * 60) %}
-                        {% if not exam.examStatus %}
-                            <div class="exam-block" style="background-color: grey ;left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
-                                <strong>{{ exam.course_code }}</strong><br>
-                                {{ exam.course_name }}<br>
-                                <i>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</i>
-                            </div>
-                        {% endif %}
-                        <div class="exam-block" style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
+                        {% set top_pos = 5 + (pos.row * 60) %}
+
+                        <div 
+                            class="exam-block" style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px; background-color: {% if not exam.examStatus %} grey {% else %} initial {% endif %};">
                             <strong>{{ exam.course_code }}</strong><br>
                             {{ exam.course_name }}<br>
                             <i>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</i>
@@ -66,8 +61,6 @@
                     {% endfor %}
                 </div>
             </div>
-
-
         {% endfor %}
     </div>
 </div>
