--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -48,11 +48,11 @@
                         {% set pos = positions[i] %}
                         {% set start_hour = exam.start_time.hour + (exam.start_time.minute / 60) %}
                         {% set end_hour = exam.end_time.hour + (exam.end_time.minute / 60) %}
-                        {% set left_pos = 10 + start_hour * hour_width %}
+                        {% set left_pos = 60 + start_hour * hour_width %}
                         {% set width = (end_hour - start_hour) * hour_width %}
-                        {% set top_pos = 50 + (pos.row * 60) %}
+                        {% set top_pos = 5 + (pos.row * 60) %}
 
-                        <div class="exam-block" style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px; background-color: {% if not exam.examStatus %} grey {% endif %};">
+                        <div class="exam-block" style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px; {% if not exam.examStatus %} background-color: grey {% endif %};">
                             <strong>{{ exam.course_code }}</strong><br>
                             {{ exam.course_name }}<br>
                             <i>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</i>
