--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -51,15 +51,15 @@
                         {% set left_pos = 50 + start_hour * hour_width %}
                         {% set width = (end_hour - start_hour) * hour_width %}
                         {% set top_pos = 5 + (pos.row * 60) %}
+                        
+                        {% if exam.examStatus %}
+                            {% set block_color = '#4682b4' %}
+                        {% else %}
+                            {% set block_color = 'grey' %}
+                        {% endif %}
 
-                        <div class="exam-block" style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
-                            {% if not exam.examStatus}
-                                <div class="exam-block" style="background-color: grey; left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
-                                    <strong>{{ exam.course_code }}</strong><br>
-                                    {{ exam.course_name }}<br>
-                                    <i>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</i>
-                                </div>
-                            {% endif %}
+                        <div class="exam-block"
+                            style="background-color: {{ block_color }}; left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
                             <strong>{{ exam.course_code }}</strong><br>
                             {{ exam.course_name }}<br>
                             <i>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</i>
