--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -20,16 +20,13 @@
             {% endfor %}
         </div>
 
-        {% set hour_width = 75 %}
+        {% set hour_width = 80 %}
         {% for date, exams in calendar_data.items() %}
             {% set sorted_exams = exams | sort(attribute='start_time') %}
             {% set positions = [] %}
 
             {% for exam in sorted_exams %}
-                {% set overlapping = positions
-                    | selectattr("start", "lt", exam.end_time)
-                    | selectattr("end", "gt", exam.start_time)
-                    | list %}
+                {% set overlapping = positions | selectattr("start", "lt", exam.end_time) | selectattr("end", "gt", exam.start_time) | list %}
                 {% set row_index = overlapping | length %}
                 {% set _ = positions.append({'start': exam.start_time, 'end': exam.end_time, 'row': row_index}) %}
             {% endfor %}
@@ -42,20 +39,21 @@
 
             <div class="calendar-row">
                 <div class="calendar-date-label">{{ date.strftime("%d %b %Y (%A)") }}</div>
-                <div class="calendar-day" style="width: {{ hour_width * 24 }}px; height: {{ max_row * 60 }}px;">
+                <div class="calendar-day" style="width: {{ hour_width * 24 }}px; height: {{ max_row * 70 }}px;">
                     {% for i in range(sorted_exams|length) %}
                         {% set exam = sorted_exams[i] %}
                         {% set pos = positions[i] %}
                         {% set start_hour = exam.start_time.hour + (exam.start_time.minute / 60) %}
                         {% set end_hour = exam.end_time.hour + (exam.end_time.minute / 60) %}
-                        {% set left_pos = 50 + start_hour * hour_width %}
+                        {% set left_pos = 10 + start_hour * hour_width %}
                         {% set width = (end_hour - start_hour) * hour_width %}
                         {% set top_pos = 5 + (pos.row * 60) %}
-                        
-                        {% if exam.examStatus %}
-                            {% set block_color = '#4682b4' %}
-                        {% else %}
+
+                        {% set today = now().date() %}
+                        {% if date < today %}
                             {% set block_color = 'grey' %}
+                        {% else %}
+                            {% set block_color = '#4682b4' %}
                         {% endif %}
 
                         <div class="exam-block"
